Changes to final model

--- a/Part 1.1.1. Growth on simple sugars.ipynb
+++ b/Part 1.1.1. Growth on simple sugars.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2f995e4c-19c6-420a-80f7-ca3f07eb11e1",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b78d4614-81fe-452a-b36c-74bfd0071ce8",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,9 @@
   {
    "cell_type": "markdown",
    "id": "2025d81b-d475-4808-9c46-e18ec0895c25",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### <span style=\"color: blue;\">pFBA with the media the model is initiated with (H10_minimal_glucose)</span>\n",
     "\n",
@@ -89,6 +91,42 @@
     "- **H10_minimal_glucose** is minimal media from *Handling Several Sugars at a Time: a Case Study of Xyloglucan Utilization by Ruminiclostridium cellulolyticum (Kampik et al.,2021)*\n",
     "\n",
     "**Results**:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "77834bbf-9165-4218-95a0-7efd983a3d57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R_ACGApts: M_acgam_e + M_pep_c --> M_acgam6p_c + M_pyr_c\n",
+      "R_ACMANApts: M_acmana_e + M_pep_c --> M_acmanap_c + M_pyr_c\n",
+      "R_ARBTpts: M_arbt_e + M_pep_c --> M_arbt6p_c + M_pyr_c\n",
+      "R_ASCBpts: M_ascb__L_e + M_pep_c --> M_ascb6p_c + M_pyr_c\n",
+      "R_DHAPT: M_dha_c + M_pep_c --> M_dhap_c + M_pyr_c\n",
+      "R_FRUpts: M_fru_e + M_pep_c --> M_f1p_c + M_pyr_c\n",
+      "R_GALTpts: M_galt_e + M_pep_c --> M_galt1p_c + M_pyr_c\n",
+      "R_GALpts: M_gal_e + M_pep_c <-> M_dgal6p_c + M_pyr_c\n",
+      "R_GAMpts: M_gam_e + M_pep_c --> M_gam6p_c + M_pyr_c\n",
+      "R_GLCpts: M_glc__D_e + M_pep_c --> M_g6p_c + M_pyr_c\n",
+      "R_MALTpts: M_malt_e + M_pep_c --> M_malt6p_c + M_pyr_c\n",
+      "R_MANpts: M_man_e + M_pep_c --> M_man6p_c + M_pyr_c\n",
+      "R_MNLpts: M_mnl_e + M_pep_c --> M_mnl1p_c + M_pyr_c\n",
+      "R_SBTpts: M_pep_c + M_sbt__D_e --> M_pyr_c + M_sbt6p_c\n",
+      "R_SUCpts: M_pep_c + M_sucr_e --> M_pyr_c + M_suc6p_c\n",
+      "R_TREpts: M_pep_c + M_tre_e --> M_pyr_c + M_tre6p_c\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.reactions.R_BGLA.gpr\n",
+    "model.gene_to_reaction_lookup()['G_WP_012634655_1']\n",
+    "for rxn in model.gene_to_reaction_lookup()['G_WP_015924346_1']:\n",
+    "    print(model.reactions[rxn])"
    ]
   },
   {
