--- a/Part 3.1.1. Reconstructing pathways for uptake of oligosaccharides from cellulose.ipynb
+++ b/Part 3.1.1. Reconstructing pathways for uptake of oligosaccharides from cellulose.ipynb
@@ -784,11 +784,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "dbb1e150-62a5-4acc-b8ad-b73c6b5ce08f",
+   "cell_type": "raw",
+   "id": "fa14facb-6976-4daa-90ca-05bf9c0d613f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for rxn in rxns_exchange:\n",
     "    model.add_reaction(rxn)"
@@ -796,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "bc106fcf-e4ea-4c2c-828b-82055082a857",
    "metadata": {},
    "outputs": [
@@ -812,7 +810,7 @@
       "Reactions:\n",
       "enzymatic 881\n",
       "transport 428\n",
-      "exchange 213\n",
+      "exchange 210\n",
       "sink 0\n",
       "other 244\n"
      ]
@@ -840,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "1b0ae04b-5a01-4917-97e9-68b844413fee",
    "metadata": {},
    "outputs": [],
@@ -850,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "9f59bc91-b61d-450a-b349-3a5f5c20c171",
    "metadata": {},
    "outputs": [],
@@ -869,36 +867,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "19ec0eab-1a32-4b94-9d87-304581d764e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/idunmariaburgos/opt/anaconda3/envs/RecAndAn/lib/python3.7/site-packages/reframed/solvers/cplex_solver.py:252: UserWarning: Objective variable not previously declared: R_EX_cell5_e\n",
+      "  warn(f\"Objective variable not previously declared: {r_id}\")\n",
+      "/Users/idunmariaburgos/opt/anaconda3/envs/RecAndAn/lib/python3.7/site-packages/reframed/solvers/cplex_solver.py:252: UserWarning: Objective variable not previously declared: R_EX_cell4_e\n",
+      "  warn(f\"Objective variable not previously declared: {r_id}\")\n",
+      "/Users/idunmariaburgos/opt/anaconda3/envs/RecAndAn/lib/python3.7/site-packages/reframed/solvers/cplex_solver.py:252: UserWarning: Objective variable not previously declared: R_EX_cell3_e\n",
+      "  warn(f\"Objective variable not previously declared: {r_id}\")\n"
+     ]
+    }
+   ],
    "source": [
     "sol = FVA(model,constraints=env, reactions= rxn_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "f3297e39-4906-458d-9b20-ab1747f74522",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'R_EX_cell5_e': [-10.0, 0.0],\n",
-       " 'R_EX_cell4_e': [-10.0, 0.0],\n",
-       " 'R_EX_cell3_e': [-10.0, 0.0],\n",
+       "{'R_EX_cell5_e': [0.0, 0.0],\n",
+       " 'R_EX_cell4_e': [0.0, 0.0],\n",
+       " 'R_EX_cell3_e': [0.0, 0.0],\n",
        " 'R_Cellbabc': [0.0, 10.0],\n",
-       " 'R_cell3abc': [0.0, 10.0],\n",
-       " 'R_cell4abc': [0.0, 10.0],\n",
-       " 'R_cell5abc': [0.0, 10.0],\n",
-       " 'R_CEPA3': [0.0, 20.0],\n",
-       " 'R_CEPA4': [0.0, 10.0],\n",
-       " 'R_CEPA2': [0.0, 30.0]}"
+       " 'R_cell3abc': [0.0, 0.0],\n",
+       " 'R_cell4abc': [0.0, 0.0],\n",
+       " 'R_cell5abc': [0.0, 0.0],\n",
+       " 'R_CEPA3': [0.0, 0.0],\n",
+       " 'R_CEPA4': [0.0, 0.0],\n",
+       " 'R_CEPA2': [0.0, 0.0]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "718ca0fa-4a88-482c-aa96-31d7188d7e8f",
    "metadata": {},
    "outputs": [],
@@ -930,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "98afe817-300c-441d-bb1c-9b28c12b94d9",
    "metadata": {},
    "outputs": [],
@@ -940,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "0d1f388c-51e2-4a38-8417-273ad8fcdefd",
    "metadata": {},
    "outputs": [
@@ -950,12 +961,12 @@
        "['G_WP_015925555_1',\n",
        " 'G_WP_015926752_1',\n",
        " 'G_WP_015925557_1',\n",
-       " 'G_WP_015925556_1',\n",
+       " 'G_WP_015925780_1',\n",
        " 'G_WP_015924937_1',\n",
-       " 'G_WP_015925780_1']"
+       " 'G_WP_015925556_1']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "6d279239-8067-4a28-99c2-2af2930b48e5",
    "metadata": {},
    "outputs": [
@@ -977,9 +988,9 @@
       "Gene: G_WP_015925555_1, Reactions: ['R_ARBabc', 'R_Cellbabc', 'R_cell3abc', 'R_cell4abc', 'R_cell5abc']\n",
       "Gene: G_WP_015926752_1, Reactions: ['R_CEPA2']\n",
       "Gene: G_WP_015925557_1, Reactions: ['R_Cellbabc', 'R_cell3abc', 'R_cell4abc', 'R_cell5abc']\n",
-      "Gene: G_WP_015925556_1, Reactions: ['R_ARBabc', 'R_Cellbabc', 'R_cell3abc', 'R_cell4abc', 'R_cell5abc']\n",
+      "Gene: G_WP_015925780_1, Reactions: ['R_CEPA3']\n",
       "Gene: G_WP_015924937_1, Reactions: ['R_CEPA3', 'R_CEPA4']\n",
-      "Gene: G_WP_015925780_1, Reactions: ['R_CEPA3']\n"
+      "Gene: G_WP_015925556_1, Reactions: ['R_ARBabc', 'R_Cellbabc', 'R_cell3abc', 'R_cell4abc', 'R_cell5abc']\n"
      ]
     }
    ],
@@ -995,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "1c7f21e3-dace-4c44-a51a-41e49a3fb0e4",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "d6a05591-1a95-41f3-bd32-2ed5e4b7e93c",
    "metadata": {},
    "outputs": [
@@ -1028,17 +1039,17 @@
       "\u001b[92m  R_cell3abc: M_cell3_e + 2 M_atp_c + M_h2o_c --> M_cell3_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_cell4abc: M_cell4_e + 2 M_atp_c + M_h2o_c --> M_cell4_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_cell5abc: M_cell5_e + 2 M_atp_c + M_h2o_c --> M_cell5_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
+      "Gene: G_WP_015925780_1\n",
+      "\u001b[92m  R_CEPA3: M_cell4_c + M_pi_c --> M_cell3_c + M_g1p_c\u001b[00m\n",
+      "Gene: G_WP_015924937_1\n",
+      "\u001b[92m  R_CEPA3: M_cell4_c + M_pi_c --> M_cell3_c + M_g1p_c\u001b[00m\n",
+      "\u001b[92m  R_CEPA4: M_cell5_c + M_pi_c --> M_cell4_c + M_g1p_c\u001b[00m\n",
       "Gene: G_WP_015925556_1\n",
       "  R_ARBabc: M_arab__L_e + M_atp_c + M_h2o_c --> M_adp_c + M_arab__L_c + M_h_c + M_pi_c\n",
       "\u001b[92m  R_Cellbabc: M_cellb_e + 2 M_atp_c + M_h2o_c --> M_cellb_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_cell3abc: M_cell3_e + 2 M_atp_c + M_h2o_c --> M_cell3_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_cell4abc: M_cell4_e + 2 M_atp_c + M_h2o_c --> M_cell4_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
-      "\u001b[92m  R_cell5abc: M_cell5_e + 2 M_atp_c + M_h2o_c --> M_cell5_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
-      "Gene: G_WP_015924937_1\n",
-      "\u001b[92m  R_CEPA3: M_cell4_c + M_pi_c --> M_cell3_c + M_g1p_c\u001b[00m\n",
-      "\u001b[92m  R_CEPA4: M_cell5_c + M_pi_c --> M_cell4_c + M_g1p_c\u001b[00m\n",
-      "Gene: G_WP_015925780_1\n",
-      "\u001b[92m  R_CEPA3: M_cell4_c + M_pi_c --> M_cell3_c + M_g1p_c\u001b[00m\n"
+      "\u001b[92m  R_cell5abc: M_cell5_e + 2 M_atp_c + M_h2o_c --> M_cell5_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n"
      ]
     }
    ],
@@ -1054,6 +1065,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5a8f0a04-7f3f-46cb-aa15-c18cb13be6cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(G_WP_242651738_1 or (G_WP_012634654_1 and G_WP_015926592_1) or (G_WP_015924545_1 and G_WP_015924646_1))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_GLCabc.gpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "62154836-9ee7-4888-ac4d-9db86eaceb5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(G_WP_015925555_1 and G_WP_015925556_1)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_ARBabc.gpr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "176da293-1227-4872-abbb-c73abcb7c4f6",
    "metadata": {
@@ -1065,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "b2222a05-f421-4f3f-9736-598f4ddd9d51",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "34c28c8b-d704-4695-9463-5c77e00fb80b",
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "a210d8f4-bd54-4b71-bf44-4de9dff1c73f",
    "metadata": {},
    "outputs": [],
@@ -1095,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "ce0becf4-5a53-438a-87ee-9830adc895eb",
    "metadata": {},
    "outputs": [],
@@ -1105,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "d47dd6ec-4e7a-45ad-9281-eb1dd02d45a1",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "9fdf4357-b8f0-4531-b16a-827db4d42603",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "aceb678f-d11e-40d8-9fd9-f17a8ba37338",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1230,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Reactions</th>\n",
-       "      <td>1766</td>\n",
+       "      <td>1763</td>\n",
        "      <td>1811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1196,12 +1249,12 @@
       ],
       "text/plain": [
        "             model_c_H10_part3_1_1  model_cellulolyticum_H10\n",
-       "Reactions                     1766                      1811\n",
+       "Reactions                     1763                      1811\n",
        "Metabolites                   1256                      1250\n",
        "Genes                          732                       733"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "6e21c733-ca3c-44a8-8a14-d11b32a9407b",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1310,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Exchange</th>\n",
-       "      <td>213</td>\n",
+       "      <td>210</td>\n",
        "      <td>210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1282,13 +1335,13 @@
       "text/plain": [
        "           model_c_H10_part3_1_1  model_cellulolyticum_H10\n",
        "Enzymatic                    881                       883\n",
-       "Exchange                     213                       210\n",
+       "Exchange                     210                       210\n",
        "Transport                    428                       475\n",
        "Sink                           0                         0\n",
        "Other                        244                       243"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
