--- a/Part 3.2.1. Reconstructing pathway for uptake of oligosaccharides from xyloglucan.ipynb
+++ b/Part 3.2.1. Reconstructing pathway for uptake of oligosaccharides from xyloglucan.ipynb
@@ -1099,12 +1099,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gene: G_G_WP_015925873_1, Reactions: ['R_XYLqqqg', 'R_XYLqqg', 'R_XYLqg']\n",
+      "Gene: Ccel_2451, Reactions: ['R_GALqlqg', 'R_GALqqlg', 'R_GALqllg']\n",
       "Gene: G_G_WP_015925876_1, Reactions: ['R_QLQGabc', 'R_QQLGabc', 'R_QLLGabc', 'R_QQQGabc', 'R_GQQGabc']\n",
-      "Gene: G_G_WP_015925874_1, Reactions: ['R_QLQGabc', 'R_QQLGabc', 'R_QLLGabc', 'R_QQQGabc', 'R_GQQGabc']\n",
-      "Gene: G_G_WP_015925875_1, Reactions: ['R_QLQGabc', 'R_QQLGabc', 'R_QLLGabc', 'R_QQQGabc', 'R_GQQGabc']\n",
       "Gene: G_G_WP_015925872_1, Reactions: ['R_GLUgqqg', 'R_GLUgqg']\n",
-      "Gene: Ccel_2451, Reactions: ['R_GALqlqg', 'R_GALqqlg', 'R_GALqllg']\n"
+      "Gene: G_G_WP_015925873_1, Reactions: ['R_XYLqqqg', 'R_XYLqqg', 'R_XYLqg']\n",
+      "Gene: G_G_WP_015925874_1, Reactions: ['R_QLQGabc', 'R_QQLGabc', 'R_QLLGabc', 'R_QQQGabc', 'R_GQQGabc']\n",
+      "Gene: G_G_WP_015925875_1, Reactions: ['R_QLQGabc', 'R_QQLGabc', 'R_QLLGabc', 'R_QQQGabc', 'R_GQQGabc']\n"
      ]
     }
    ],
@@ -1140,16 +1140,23 @@
      "text": [
       "Green reactions are the reactions that were included in this Jupyter Notebook\n",
       "\n",
-      "Gene: G_G_WP_015925873_1\n",
-      "\u001b[92m  R_XYLqqqg: M_QQQG_c + M_h2o_c --> M_GQQG_c + M_xyl__D_c\u001b[00m\n",
-      "\u001b[92m  R_XYLqqg: M_QQG_c + M_h2o_c --> M_GQG_c + M_xyl__D_c\u001b[00m\n",
-      "\u001b[92m  R_XYLqg: M_QG_c + M_h2o_c --> M_cellb_c + M_xyl__D_c\u001b[00m\n",
+      "Gene: Ccel_2451\n",
+      "\u001b[92m  R_GALqlqg: M_QLQG_c + M_h2o_c --> M_QQQG_c + M_gal_c\u001b[00m\n",
+      "\u001b[92m  R_GALqqlg: M_QQLG_c + M_h2o_c --> M_QQQG_c + M_gal_c\u001b[00m\n",
+      "\u001b[92m  R_GALqllg: M_QLLG_c + 2 M_h2o_c --> M_QQQG_c + 2 M_gal_c\u001b[00m\n",
       "Gene: G_G_WP_015925876_1\n",
       "\u001b[92m  R_QLQGabc: M_QLQG_e + 2 M_atp_c + M_h2o_c --> M_QLQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QQLGabc: M_QQLG_e + 2 M_atp_c + M_h2o_c --> M_QQLG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QLLGabc: M_QLLG_e + 2 M_atp_c + M_h2o_c --> M_QLLG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QQQGabc: M_QQQG_e + 2 M_atp_c + M_h2o_c --> M_QQQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_GQQGabc: M_GQQG_e + 2 M_atp_c + M_h2o_c --> M_GQQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
+      "Gene: G_G_WP_015925872_1\n",
+      "\u001b[92m  R_GLUgqqg: M_GQQG_c + M_h2o_c --> M_QQG_c + M_glc__D_c\u001b[00m\n",
+      "\u001b[92m  R_GLUgqg: M_GQG_c + M_h2o_c --> M_QG_c + M_glc__D_c\u001b[00m\n",
+      "Gene: G_G_WP_015925873_1\n",
+      "\u001b[92m  R_XYLqqqg: M_QQQG_c + M_h2o_c --> M_GQQG_c + M_xyl__D_c\u001b[00m\n",
+      "\u001b[92m  R_XYLqqg: M_QQG_c + M_h2o_c --> M_GQG_c + M_xyl__D_c\u001b[00m\n",
+      "\u001b[92m  R_XYLqg: M_QG_c + M_h2o_c --> M_cellb_c + M_xyl__D_c\u001b[00m\n",
       "Gene: G_G_WP_015925874_1\n",
       "\u001b[92m  R_QLQGabc: M_QLQG_e + 2 M_atp_c + M_h2o_c --> M_QLQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QQLGabc: M_QQLG_e + 2 M_atp_c + M_h2o_c --> M_QQLG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
@@ -1161,14 +1168,7 @@
       "\u001b[92m  R_QQLGabc: M_QQLG_e + 2 M_atp_c + M_h2o_c --> M_QQLG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QLLGabc: M_QLLG_e + 2 M_atp_c + M_h2o_c --> M_QLLG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
       "\u001b[92m  R_QQQGabc: M_QQQG_e + 2 M_atp_c + M_h2o_c --> M_QQQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
-      "\u001b[92m  R_GQQGabc: M_GQQG_e + 2 M_atp_c + M_h2o_c --> M_GQQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n",
-      "Gene: G_G_WP_015925872_1\n",
-      "\u001b[92m  R_GLUgqqg: M_GQQG_c + M_h2o_c --> M_QQG_c + M_glc__D_c\u001b[00m\n",
-      "\u001b[92m  R_GLUgqg: M_GQG_c + M_h2o_c --> M_QG_c + M_glc__D_c\u001b[00m\n",
-      "Gene: Ccel_2451\n",
-      "\u001b[92m  R_GALqlqg: M_QLQG_c + M_h2o_c --> M_QQQG_c + M_gal_c\u001b[00m\n",
-      "\u001b[92m  R_GALqqlg: M_QQLG_c + M_h2o_c --> M_QQQG_c + M_gal_c\u001b[00m\n",
-      "\u001b[92m  R_GALqllg: M_QLLG_c + 2 M_h2o_c --> M_QQQG_c + 2 M_gal_c\u001b[00m\n"
+      "\u001b[92m  R_GQQGabc: M_GQQG_e + 2 M_atp_c + M_h2o_c --> M_GQQG_c + 2 M_adp_c + M_h_c + 2 M_pi_c\u001b[00m\n"
      ]
     }
    ],
