--- a/Part 3.3.2 Test.ipynb
+++ b/Part 3.3.2 Test.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "2f995e4c-19c6-420a-80f7-ca3f07eb11e1",
    "metadata": {
     "tags": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "b78d4614-81fe-452a-b36c-74bfd0071ce8",
    "metadata": {
     "tags": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "f9f03177-ee13-4922-9974-8a071123fd82",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "8192ffd7-1182-4d94-aee1-119d0d8dd7a0",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "1ccca4e0-484c-4649-9138-661e923014fe",
    "metadata": {
     "tags": []
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "dd244d01-8bbf-466e-bb41-9d35b99e2fe5",
    "metadata": {
     "tags": []
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "b348ccef-469a-425b-90a7-ba6309083425",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "ab1dec6d-75fd-4df2-92ab-3bfaabc12b34",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "1aff5031-23bf-41d6-868d-93deba8cfa93",
    "metadata": {
     "tags": []
@@ -234,8 +234,593 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "2dfe5285-fddb-4b7e-a9a1-5db52681dd9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are NO energy producing cycles in the model\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    \n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if value>200:\n",
+    "              \n",
+    "              print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e005cf3b-d22c-4719-942f-5f39fda1c616",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e78e3877-7b01-4a59-b50e-1fde52b3d3bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy = model.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ab77346e-e221-40c5-9921-0116ff86fe8d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "model_copy.reactions.R_ATPM.lb=0\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective['R_ATPM']=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cbd6305b-fbca-486a-a0f9-edf34abc1615",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are NO energy producing cycles in the model\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    \n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if value>200:\n",
+    "              \n",
+    "              print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dee98257-b42d-4db2-868a-88ecbdca91b8",
+   "metadata": {},
+   "source": [
+    "#### NADH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "0b374d2f-04ed-4822-8d02-4ce874a17950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from reframed import ReactionType, CBReaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "768a6040-c0cf-4437-97d3-3a3b58f80581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy = model.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "416ae91d-d44f-4f18-870f-8403a90cc748",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mets_exchange = [met.id for met in mets if met.compartment==\"C_e\"]\n",
+    "#rxns_exchange = []\n",
+    "#for met in mets_exchange:\n",
+    "met= \"M_nadh_c\"\n",
+    "rxn_id = \"R_nadhM\"\n",
+    "name = \"Demand of \" + \"nadh_c\"\n",
+    "reversible=True\n",
+    "stoichiometry =OrderedDict({\"M_nadh_c\":-1,\"M_nad_c\":1,\"M_h_c\":1})\n",
+    "reaction_type = ReactionType.OTHER\n",
+    "rxn = CBReaction(reaction_id=rxn_id, \n",
+    "                 name=name, \n",
+    "                 reversible=reversible, \n",
+    "                 stoichiometry=stoichiometry, \n",
+    "                 reaction_type=reaction_type)\n",
+    "model_copy.add_reaction(rxn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "40769880-7f92-4c84-9b28-7f74ab9dc197",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R_nadhM: M_nadh_c <-> M_nad_c + M_h_c"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_copy.reactions.R_nadhM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d85d215f-d230-4494-b6c8-340815ab7e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "H+"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_copy.metabolites.M_h_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "437c86bc-c40c-483d-930d-ad1ca1000fab",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective[\"R_nadhM\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "300e36ac-4cd6-425f-9a83-d6b10e9a4569",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are NO energy producing cycles in the model\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    \n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if value>200:\n",
+    "              \n",
+    "              print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da56c885-44d1-4a9e-8474-df7c57d7f425",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Ferredoxin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "771634d4-7604-4061-a027-5b7de4a565e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy = model.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "c38a7434-7824-47a2-9f78-ec30dc2f7455",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy.reactions.R_FNRR3.lb=-100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "5340f729-2c1e-47be-b7ad-c2014cc0e1b8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective[\"R_FNRR3\"]=-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "bd5c7394-e959-4f39-9425-3d788f7f2f64",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is at least one energy producing cycle in the model\n",
+      "These are the reactions that are a part of the energy producing cycle\n",
+      "\tR_H2ASE_syn: -100.0\n",
+      "\tR_FNRR2: -100.0\n",
+      "\tR_FNRR3: -100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if abs(value)>0:\n",
+    "                print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "bf8eab0d-5e4e-4b39-bd42-89b9266a2adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R_H2ASE_syn: M_h_c + M_nadph_c <-> M_h2_c + M_nadp_c"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_H2ASE_syn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "3010a744-2da3-4fbf-af8f-d7db504b8014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "G_WP_015925963_1"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_FNRR2.gpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "3b433a89-0595-4ab0-8ed2-5f3ff3973e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "G_WP_015925729_1"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_FNRR3.gpr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da977657-054a-4846-830d-7a6f79b43722",
+   "metadata": {},
+   "source": [
+    "#### GTP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "eaddce42-634f-4d57-b88f-65da5c21d266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy = model.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5fcc852f-5200-4e0a-807f-c34644623501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mets_exchange = [met.id for met in mets if met.compartment==\"C_e\"]\n",
+    "#rxns_exchange = []\n",
+    "#for met in mets_exchange:\n",
+    "\n",
+    "\n",
+    "met= \"M_gtp_c\"\n",
+    "rxn_id = \"R_EX_\" + \"gtp_c\"\n",
+    "name = \"Exchange of \" + \"gtp_c\"\n",
+    "reversible=True\n",
+    "stoichiometry =OrderedDict([(met, -1.0)])\n",
+    "reaction_type = ReactionType.EXCHANGE\n",
+    "rxn = CBReaction(reaction_id=rxn_id, \n",
+    "                 name=name, \n",
+    "                 reversible=reversible, \n",
+    "                 stoichiometry=stoichiometry, \n",
+    "                 reaction_type=reaction_type)\n",
+    "model_copy.add_reaction(rxn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "01260caf-2f1c-4ec3-ab08-c282e2a64a54",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective[\"R_EX_\" + \"gtp_c\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "aba89786-d525-46ea-98a1-dafef306aa53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are NO energy producing cycles in the model\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    \n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if value>200:\n",
+    "              \n",
+    "              print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1c793c1-fbfe-4c6d-8d43-5a436caeaa02",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Hydrogen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "598e8ffe-dc2e-4c9c-8f4e-1a30162c38c0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective[\"R_EX_\" + \"h2_e\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8966dc81-28db-4708-a65c-361d089d1bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are NO energy producing cycles in the model\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = FBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "\n",
+    "\n",
+    "if sol.fobj ==0.0:\n",
+    "    print('There are NO energy producing cycles in the model')\n",
+    "else:\n",
+    "    print('There is at least one energy producing cycle in the model')\n",
+    "    sol_pfba = pFBA(model_copy,objective=objective,constraints=env_empty)\n",
+    "    \n",
+    "    print('These are the reactions that are a part of the energy producing cycle')\n",
+    "          \n",
+    "    for rxn,value in sol_pfba.values.items():\n",
+    "          if value>200:\n",
+    "              \n",
+    "              print(\"\\t\" + str(rxn)+\": \" + str(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8883962-b7cb-49c6-826a-eb5f56f576b9",
+   "metadata": {},
+   "source": [
+    "#### Pyruvate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8c4245ba-30f9-43c2-bfb5-3754be709b60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_copy = model.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b29b34b1-4f66-44b2-b119-5302e0f61184",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mets_exchange = [met.id for met in mets if met.compartment==\"C_e\"]\n",
+    "#rxns_exchange = []\n",
+    "#for met in mets_exchange:\n",
+    "\n",
+    "\n",
+    "met= \"M_pyr_c\"\n",
+    "rxn_id = \"R_EX_\" + \"pyr_c\"\n",
+    "name = \"Exchange of \" + \"pyr_c\"\n",
+    "reversible=True\n",
+    "stoichiometry =OrderedDict([(met, -1.0)])\n",
+    "reaction_type = ReactionType.EXCHANGE\n",
+    "rxn = CBReaction(reaction_id=rxn_id, \n",
+    "                 name=name, \n",
+    "                 reversible=reversible, \n",
+    "                 stoichiometry=stoichiometry, \n",
+    "                 reaction_type=reaction_type)\n",
+    "model_copy.add_reaction(rxn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "3ae025fa-d9c1-4dc8-bbd8-86cd8ebd2043",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "env_empty = Environment.empty(model_copy)\n",
+    "objective= {rxn:0 for rxn in model_copy.reactions}\n",
+    "objective[\"R_EX_\" + \"pyr_c\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0d98e682-1cb7-4ff9-b214-55690ab2a256",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "224ad915-a358-42ff-99e2-d570935da213",
    "metadata": {},
    "outputs": [],
@@ -333,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "id": "7446ee3c-41bf-47ca-afec-b0b078843325",
    "metadata": {},
    "outputs": [],
@@ -343,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 109,
    "id": "078c3fa2-079f-4fbd-8997-9564a59f0018",
    "metadata": {},
    "outputs": [
@@ -361,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 110,
    "id": "26041fd4-1236-4e3e-ba6a-4b9bbab78f0f",
    "metadata": {},
    "outputs": [
